--- a/spec/fixtures/github/api.github.com/repos/svenfuchs/gem-release_per_page_100.json
+++ b/spec/fixtures/github/api.github.com/repos/svenfuchs/gem-release_per_page_100.json
@@ -64,7 +64,7 @@
   "created_at": "2010-04-03T00:04:17Z",
   "updated_at": "2014-09-21T08:07:15Z",
   "pushed_at": "2014-05-12T13:27:48Z",
-  "git_url": "git://github.com/svenfuchs/gem-release.git",
+  "git_url": "https://github.com/svenfuchs/gem-release.git",
   "ssh_url": "git@github.com:svenfuchs/gem-release.git",
   "clone_url": "https://github.com/svenfuchs/gem-release.git",
   "svn_url": "https://github.com/svenfuchs/gem-release",
